# jetta

./: .gitignore  .goreleaser.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
openspec/changes/add-github-ci-pipeline/: tasks.md
src/: animation.rs  decode.rs  encode.rs  main.rs  output.rs  types.rs  validate.rs
tests/: integration_tests.rs
