[package]
name = "jetta"
version = "0.1.0"
edition = "2021"

[dependencies]
# JWT processing
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Terminal colors
colored = "2.1"
crossterm = "0.28"

# Random number generation for animation
rand = "0.8"

# Time handling for timestamps
chrono = "0.4"
base64 = "0.22.1"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
tempfile = "3"
